--- a/conf/broker.conf
+++ b/conf/broker.conf
@@ -34,3 +34,4 @@ storePathIndex=/Users/luoxin/projects/rocketmq/store/index
 storeCheckpoint=/Users/luoxin/projects/rocketmq/store/checkpoint
 ## abort 文件存储路径
 abortFile=/Users/luoxin/projects/rocketmq/store/abort
+autoCreateTopicEnable = true
